# Graphite

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  GraphiteTests.cmake  README.md
.github/actions/: build.sh
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
Graphite/data/: data.cpp  data.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
Graphite/rsrc/: classic.cpp  classic.hpp  extended.cpp  extended.hpp  file.cpp  file.hpp  manager.cpp  manager.hpp  resource.cpp  resource.hpp  rez.cpp  rez.hpp  type.cpp  type.hpp
GraphiteTest/: main.cpp
Tests/: runner.cpp  test.hpp
Tests/data/: block_tests.cpp  simd_tests.cpp
Tests/util/: hashing_tests.cpp
libGraphite/: hints.hpp
libGraphite/compression/: packbits.cpp  packbits.hpp
libGraphite/data/: data.cpp  data.hpp  encoding.hpp  endianess.hpp  reader.cpp  reader.hpp  simd.hpp  writer.cpp  writer.hpp
libGraphite/font/: fond.cpp  fond.hpp  manager.cpp  manager.hpp  nfnt.cpp  nfnt.hpp  sfnt.cpp  sfnt.hpp
libGraphite/quickdraw/: cicn.cpp  cicn.hpp  clut.cpp  clut.hpp  geometry.cpp  geometry.hpp  pict.cpp  pict.hpp  pixmap.cpp  pixmap.hpp  ppat.cpp  ppat.hpp  rle.cpp  rle.hpp
libGraphite/quickdraw_old/: cicn.cpp  pict.cpp  pict.hpp  pixmap.cpp  ppat.cpp  ppat.hpp
libGraphite/quicktime/: animation.cpp  animation.hpp  image_description.cpp  image_description.hpp  imagedesc.cpp  imagedesc.hpp  planar.cpp  planar.hpp  raw.cpp  raw.hpp
libGraphite/resources/: sound.cpp  sound.hpp  string.cpp  string.hpp
libGraphite/rsrc/: attribute.cpp  attribute.hpp  classic.cpp  classic.hpp  extended.cpp  extended.hpp  file.cpp  file.hpp  manager.cpp  manager.hpp  resource.cpp  resource.hpp  result.cpp  result.hpp  rez.cpp  rez.hpp  type.cpp  type.hpp
libGraphite/sound/: sound.cpp  sound.hpp
libGraphite/spriteworld/: rle.cpp  rle.hpp  rleD.cpp  rleD.hpp  rleX.cpp  rleX.hpp
libGraphite/sys/: types.hpp
libGraphite/toolbox/: dialog.cpp  dialog_item_list.cpp
libTesting/: runner.cpp  testing.cmake  testing.hpp
tests/: CMakeLists.txt
(+302 files in other folders)
